# external-accessed-stack

./: Cargo.toml
src/: hooks.rs  lib.rs  mock_operation.rs  op_int_utils.rs  utils.rs
src/op_int_utils/: atomic_operation_completer.rs  atomic_state.rs  no_op_waker.rs
src/tests/: mock_operations.rs
src/utils/: atomic_hook.rs
tests/use-case/stm32f4xx/: fake_dma.rs  main.rs
