[package]
name = "remote_accessed_buffer"
version = "0.1.0"
authors = ["Philipp Korber <philipp@korber.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-utils = "0.1.0"
futures-lite = "1.8.0"

[dev-dependencies]
rand = "0.7.3"
async-std = { version="1.6.5", features=["attributes"] }
