[package]
name = "remote_accessed_buffer"
version = "0.1.0"
authors = ["Philipp Korber <philipp@korber.dev>"]
edition = "2018"

[features]
default = []

[dependencies]
pin-utils = "0.1.0"
futures-lite = { version="1.11.0", default-features=false }
embedded-dma = { version="0.1.2", optional=true }

[dev-dependencies]
rand = "0.7.3"
async-std = { version="1.6.5", features=["attributes"] }
waker-fn = "1.1.0"
