[package]
name = "external-accessed-buffer"
version = "0.1.0"
authors = ["Philipp Korber <philipp@korber.dev>"]
edition = "2018"

[features]
default = []
std = ["futures-lite/std"]
#implicite: embedded-dma = []

[[test]]
name = "stm32f4xx"
path = "tests/use-case/stm32f4xx/main.rs"
required-features = ["embedded-dma"]

[dependencies]
pin-utils = "0.1.0"
futures-lite = { version="1.11.0", default-features=false }
embedded-dma = { version="0.1.2", optional=true }

[dev-dependencies]
rand = "0.7.3"
async-std = { version="1.6.5", features=["attributes"] }
waker-fn = "1.1.0"
embedded-dma = "0.1.2"
